--- a/css/style.css
+++ b/css/style.css
@@ -1147,7 +1147,7 @@
 body {
   background-color: var(--black);
   color: #fff;
-  cursor: none;
+  cursor: auto;
   font-family: Clashdisplay, sans-serif;
   font-size: 22px;
   line-height: 28px;
@@ -1313,32 +1313,15 @@ blockquote {
 }
 
 .cursor-wrapp {
-  z-index: 9999;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  position: fixed;
-  inset: 0%;
+  display: none !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
 }
 
 .cursor {
-  z-index: 9999;
-  border: 1px solid var(--default);
-  opacity: 0;
-  -webkit-text-fill-color: inherit;
-  cursor: none;
-  mix-blend-mode: normal;
-  background-color: #a9a9a980;
-  background-clip: border-box;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  width: 70px;
-  height: 70px;
-  display: flex;
-  position: absolute;
+  display: none !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
 }
 
 .project-cursor-text {
