🎨 Reduz tamanho das imagens da seção work
- Adiciona max-width de 400px nas imagens work (mesmo tamanho dos cards THE PATH)
- Centraliza imagens com margin: 0 auto
- Mantém aspect ratio 4:3 e bordas arredondadas

--- a/css/style.css
+++ b/css/style.css
@@ -1744,6 +1744,11 @@ blockquote {
   display: block;
 }
 
+.work-img-wrapp {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
 .work-img {
   width: 100%;
 }
