--- a/css/style.css
+++ b/css/style.css
@@ -1733,7 +1733,7 @@ blockquote {
   grid-column-gap: 20px;
   grid-row-gap: 40px;
   grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
 }
@@ -1742,11 +1742,6 @@ blockquote {
   color: var(--white);
   text-decoration: none;
   display: block;
-}
-
-.work-img-wrapp {
-  max-width: 400px;
-  margin: 0 auto;
 }
 
 .work-img {
@@ -3477,7 +3472,7 @@ blockquote {
   @media (min-width: 768px) {
     .work-list {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       gap: 20px;
       overflow-x: visible;
       padding: 0;
