--- a/css/style.css
+++ b/css/style.css
@@ -4114,6 +4114,7 @@ blockquote {
   min-height: 320px;
   padding: 20px;
   display: flex;
+  justify-content: center;
   background-color: #191919;
 }
 
@@ -4151,7 +4152,7 @@ blockquote {
   font-size: 40px;
   font-weight: 200;
   line-height: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   color: var(--white);
   text-transform: uppercase;
 }
@@ -4162,7 +4163,6 @@ blockquote {
   color: var(--white);
   font-weight: 300;
   margin: 0;
-  margin-top: auto;
 }
 
 /* Desktop: mostra 2-3 cards */
