--- a/css/style.css
+++ b/css/style.css
@@ -2283,9 +2283,14 @@ select.input-style {
   cursor: pointer;
   font-size: 18px;
   line-height: 24px;
-  color: #fff;
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.05) !important;
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
   min-height: 50px;
   padding: 25px 45px 20px 20px;
+  transition: all 0.3s ease;
+  width: 100%;
 }
 
 select.input-style option {
@@ -2297,19 +2302,20 @@ select.input-style option {
 
 select.input-style:focus {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%2310b981' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.08);
+  color: #fff !important;
+  background-color: rgba(255, 255, 255, 0.08) !important;
   border-color: #10b981;
   box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.2);
+  outline: none;
 }
 
 select.input-style:invalid {
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5) !important;
 }
 
 select.input-style:valid,
 select.input-style:not([value=""]) {
-  color: #fff;
+  color: #fff !important;
 }
 
 select.input-style option:checked {
